vlib/v/checker/tests/if_smartcast_mut_var_interface_err.out
vlib/v/checker/tests/if_smartcast_mut_var_interface_er.vv:13:5: error: smart casting to a mutable interface requires `if mut foo_mut is ...`
   11 | fn main() {
   12 |     mut foo_mut := Foo(Bar{})
   13 |     if foo_mut is Bar {
      |        ~~~~~~~
   14 |         println(json.encode(foo_mut))
   15 |     }
